--- a/templates/updates.html
+++ b/templates/updates.html
@@ -20,7 +20,7 @@
             <ul class="nav-links">
                 <li><a href="/">Locations</a></li>
                 <li><a href="/update">Go to Updates</a></li>
-                <!-- <li><a href="#">Packaging</a></li> -->
+                <li><a href="/about">About</a></li>
             </ul>
         </div>
     </nav>
@@ -198,9 +198,6 @@
 
                 productNumberInput.value = "";
                 productLocationInput.value = "";
-
-
-
 
         }
         
