--- a/templates/location.html
+++ b/templates/location.html
@@ -19,6 +19,7 @@
             <ul class="nav-links">
                 <li><a href="/">Locations</a></li>
                 <li><a href="/update">Go to Updates</a></li>
+                <li><a href="/about">About</a></li>
             </ul>
         </div>
     </nav>
