--- a/templates/about.html
+++ b/templates/about.html
@@ -81,7 +81,7 @@
                     </ol>
                   
                 <div class="video-container">
-                    <iframe src="#" frameborder="0" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/b3l8naMMYb4?si=3HU0Cy3Tp9Lw9dd7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
 
             </div>
@@ -132,7 +132,7 @@
                 </ol>
 
                 <div class="video-container">
-                    <iframe src="#" frameborder="0" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/vW64bGLZL5w?si=CyWQNlPctSC7KlVS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
             </div>
             <div class="info">
@@ -184,7 +184,7 @@
                 </ol>
                
                 <div class="video-container">
-                    <iframe src="#" frameborder="0" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/vW64bGLZL5w?si=w_n6TZCBXPNaGf86&amp;start=67" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
             </div>
             <div class="info">
@@ -232,7 +232,7 @@
                 </ol>
 
                 <div class="video-container">
-                    <iframe src="#" frameborder="0" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/vW64bGLZL5w?si=Dwtg_os8vM6n7N0h&amp;start=124" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
             </div>
 
